--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
         <div class="row row-content">
             <div class="col">
-                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel" style="border: 5px solid black;">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img class="d-block img-fluid img-thumbnail" src="img/uthappizza.png" alt="uthappizza">    
@@ -189,6 +189,11 @@
                     <a href="#mycarousel" class="carousel-control-next" data-slide="next" role="button">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <button class="btn btn-danger" id="carousel-btn"><span class="fa fa-pause"></span></button>
+                    <!-- <div class="btn-group" id="carousel-btn">
+                        <button class="btn btn-danger btn-sm" id="carouselPause"><span class="fa fa-pause"></span></button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay"><span class="fa fa-play"></span></button>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -340,6 +345,30 @@
         </script> -->
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script>
+           $(document).ready(function(){
+                $('#mycarousel').carousel({interval:1500});
+                $('#carousel-btn').click(function(){
+                    if($('#carousel-btn').children('span').hasClass('fa-pause')){
+                        console.log($("#carousel-btn").children('span').hasClass('fa-pause'));
+                        $('#mycarousel').carousel('pause');
+                        $('#carousel-btn').children('span').removeClass('fa-pause');
+                        $('#carousel-btn').children('span').addClass('fa-play');
+                    }else{
+                        $('#mycarousel').carousel('cycle');
+                        $('#carousel-btn').children('span').removeClass('fa-play');
+                        $('#carousel-btn').children('span').addClass('fa-pause');
+                    }
+                }
+                );
+            /*    $('#carouselPause').click(function(){
+                    $('#mycarousel').carousel('pause');
+                });
+                $('#carouselPlay').click(function(){
+                    $('#mycarousel').carousel('cycle');
+                });*/
+            });
+        </script>
 </body>
 
 </html>
