--- a/index.html
+++ b/index.html
@@ -339,52 +339,9 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js">
             $('body').scrollspy({ target: '#navbar-example' })
         </script>
-        <!-- <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-            })
-        </script> -->
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        
-<!----------------------------- SCRIPT FOR ASSIGNMENT 4 -------------------------------------->
-        <script>
-            $(document).ready(() => {
-                $('#loginlink').click(()=>{
-                    $('#loginlink').attr('data-toggle','modal');
-                    $('#loginlink').attr('data-target','#loginModal');
-                });
-                $('#reserveTable').click(()=>{
-                    $('#reserveTable').attr('data-toggle','modal');
-                    $('#reserveTable').attr('data-target','#reservation');
-                });
-            });
-        </script>
-<!------------------------------------SCRIPT ENDS--------------------------------------------->
-        <script>
-           $(document).ready(function(){
-                $('#mycarousel').carousel({interval:1500});
-                $('#carousel-btn').click(function(){
-                    if($('#carousel-btn').children('span').hasClass('fa-pause')){
-                        console.log($("#carousel-btn").children('span').hasClass('fa-pause'));
-                        $('#mycarousel').carousel('pause');
-                        $('#carousel-btn').children('span').removeClass('fa-pause');
-                        $('#carousel-btn').children('span').addClass('fa-play');
-                    }else{
-                        $('#mycarousel').carousel('cycle');
-                        $('#carousel-btn').children('span').removeClass('fa-play');
-                        $('#carousel-btn').children('span').addClass('fa-pause');
-                    }
-                }
-                );
-            /*    $('#carouselPause').click(function(){
-                    $('#mycarousel').carousel('pause');
-                });
-                $('#carouselPlay').click(function(){
-                    $('#mycarousel').carousel('cycle');
-                });*/
-            });
-        </script>
+        <script src="js/scripts.js"></script>
 </body>
 
 </html>
